--- a/po/wesnoth-manual/lt.po
+++ b/po/wesnoth-manual/lt.po
@@ -3,8 +3,8 @@
 #  Andrius Štikonas <stikonas@gmail.com>, 2007-2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: Battle for Wesnoth 1.10\n"
-"POT-Creation-Date: 2012-08-18 09:39+0300\n"
+"Project-Id-Version: Battle for Wesnoth 1.11\n"
+"POT-Creation-Date: 2012-08-18 09:51+0300\n"
 "PO-Revision-Date: 2010-01-01 00:00+0300\n"
 "Last-Translator: Andrius Štikonas <stikonas@gmail.com>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
@@ -1027,9 +1027,8 @@ msgstr ""
 # type: Content of: <book><chapter><section><table><title>
 #. type: Content of: <book><chapter><section><table><title>
 #: /src/wesnoth/doc/manual/manual.en.xml:577
-#, fuzzy
 msgid "General controls and hotkeys"
-msgstr "Valdymas ir spartieji klavišai"
+msgstr "Bendras valdymas ir spartieji klavišai"
 
 # type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
@@ -1615,9 +1614,8 @@ msgstr "Laikyti mirusiu"
 # type: Content of: <book><chapter><section><section><section><title>
 #. type: Content of: <book><chapter><section><table><title>
 #: /src/wesnoth/doc/manual/manual.en.xml:1057
-#, fuzzy
 msgid "Multiplayer specific hotkeys"
-msgstr "Daugelio žaidėjų dialogas"
+msgstr "Daugelio žaidėjų spartieji klavišai"
 
 # type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
@@ -3609,9 +3607,8 @@ msgstr "Troliai ir miškiniai negali regeneruoti kitų dalinių."
 # type: Content of: <book><chapter><section><section><itemizedlist><listitem><simpara>
 #. type: Content of: <book><chapter><section><section><itemizedlist><listitem><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:2551
-#, fuzzy
 msgid "Trolls and Woses cure themselves from poison as a village does."
-msgstr "Troliai ir miškiniai gali išsigydyti nuo nuodų, panašiai, kaip kaime."
+msgstr "Troliai ir miškiniai patys išgyja nuo nuodų, panašiai, kaip kaime."
 
 # type: Content of: <book><chapter><title>
 #. type: Content of: <book><chapter><title>
