--- a/po/wesnoth-thot/lt.po
+++ b/po/wesnoth-thot/lt.po
@@ -4,7 +4,7 @@
 #  Jurgis Sūdžius <saveid@gmail.com>, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: Battle for Wesnoth 1.10\n"
+"Project-Id-Version: Battle for Wesnoth 1.11\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-10-27 15:56+0200\n"
 "PO-Revision-Date: 2010-01-01 00:00+0300\n"
@@ -1091,41 +1091,29 @@ msgstr "Kirvių nešiotojai neturi būti prileisti prie mūsų jauniklių. Pulki
 
 #. [message]: speaker=Master Perrin
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:182
-#, fuzzy
-#| msgid ""
-#| "We’re grateful for your assistance. And I’d like to send at least one of "
-#| "our senior apprentices with you to the east. It has come time for them to "
-#| "be journeymen... and I sense something being born to the east that I do "
-#| "not like the feel of."
 msgid ""
 "We’re grateful for your assistance. And I’d like to send a couple of our "
 "senior apprentices with you to the east. It has come time for them to be "
 "journeymen... and I sense something being born to the east that I do not "
 "like the feel of."
 msgstr ""
-"Esame dėkingi jums už pagalbą. Todėl norėčiau išsiųsti bent vieną iš mūsų "
-"vyresniųjų mokinių su jumis į rytus. Jiems jau atėjo laikas tapti "
-"samdiniais... Ir jaučiu kažką gimstant ten, rytuose; kažką, kieno pojūtis "
-"man visiškai nepatinka."
+"Esame dėkingi jums už pagalbą. Todėl norėčiau išsiųsti pora mūsų vyresniųjų "
+"mokinių su jumis į rytus. Jiems jau atėjo laikas tapti samdiniais... Ir "
+"jaučiu kažką gimstant ten, rytuose; kažką, kieno pojūtis man visiškai "
+"nepatinka."
 
 #. [message]: speaker=Master Perrin
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:187
-#, fuzzy
-#| msgid ""
-#| "We’re grateful for your assistance. And I’d like to send at least one of "
-#| "our senior apprentices with you to the east. It has come time for them to "
-#| "be journeymen... and I sense something being born to the east that I do "
-#| "not like the feel of."
 msgid ""
 "We’re grateful for your assistance. And I’d like to send one of our senior "
 "apprentices with you to the east. It has come time for him to be "
 "journeyman... and I sense something being born to the east that I do not "
 "like the feel of."
 msgstr ""
-"Esame dėkingi jums už pagalbą. Todėl norėčiau išsiųsti bent vieną iš mūsų "
-"vyresniųjų mokinių su jumis į rytus. Jiems jau atėjo laikas tapti "
-"samdiniais... Ir jaučiu kažką gimstant ten, rytuose; kažką, kieno pojūtis "
-"man visiškai nepatinka."
+"Esame dėkingi jums už pagalbą. Todėl norėčiau išsiųsti vieną iš mūsų "
+"vyresniųjų mokinių su jumis į rytus. Jam jau atėjo laikas tapti samdiniu... "
+"Ir jaučiu kažką gimstant ten, rytuose; kažką, kieno pojūtis man visiškai "
+"nepatinka."
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:193
@@ -2594,61 +2582,38 @@ msgstr "įkvėpimas"
 
 #. [leadership]: id=inspire_0
 #: data/campaigns/The_Hammer_of_Thursagan/utils/abilities.cfg:14
-#, fuzzy
-#| msgid ""
-#| "Inspire:\n"
-#| "This unit can inspire own L0 or L1 units that are next to it, making them "
-#| "fight better. Adjacent own units of L1 will do 25% more damage; L0 units "
-#| "will do 50% more."
 msgid ""
 "This unit can inspire own L0 or L1 units that are next to it, making them "
 "fight better. Adjacent own units of L1 will do 25% more damage; L0 units "
 "will do 50% more."
 msgstr ""
-"Įkvėpimas:\n"
-"Šis dalinys gali įkvėpti savus L0 ar L1 dalinius esančius greta, "
-"priversdamas juos kautis geriau. Šalia esantys L1 daliniai darys 25% daugiau "
-"žalos, o L0 daliniai darys 50% daugiau žalos."
+"Šis karys gali įkvėpti savus L0 ar L1 karius esančius greta, priversdamas "
+"juos kautis geriau. Šalia esantys L1 kariai darys 25% daugiau žalos; L0 "
+"kariai darys 50% daugiau žalos."
 
 #. [leadership]: id=inspire_0
 #: data/campaigns/The_Hammer_of_Thursagan/utils/abilities.cfg:45
-#, fuzzy
-#| msgid ""
-#| "Inspire:\n"
-#| "This unit can inspire own L0, L1, or L2 units that are next to it, making "
-#| "them fight better. Adjacent own units of L2 will do more 25% more damage; "
-#| "L1 units will do 50% more, and L0 will do 75% more."
 msgid ""
 "This unit can inspire own L0, L1, or L2 units that are next to it, making "
 "them fight better. Adjacent own units of L2 will do more 25% more damage; L1 "
 "units will do 50% more, and L0 will do 75% more."
 msgstr ""
-"Įkvėpimas:\n"
-"Šis dalinys gali įkvėpti savus L0, L1 ar L2 dalinius esančius greta, "
-"priversdamas juos kautis geriau. Šalia esantys L2 daliniai darys 25% daugiau "
-"žalos, L1 daliniai darys 50% daugiau žalos, o L0 daliniai darys 75% daugiau "
-"žalos."
+"Šis dalinys gali įkvėpti savus L0, L1 ar L2 karius esančius greta, "
+"priversdamas juos kautis geriau. Šalia esantys L2 kariai darys 25% daugiau "
+"žalos; L1 kariai darys 50% daugiau žalos, o L0 karys darys 75% daugiau žalos."
 
 #. [leadership]: id=inspire_0
 #: data/campaigns/The_Hammer_of_Thursagan/utils/abilities.cfg:88
-#, fuzzy
-#| msgid ""
-#| "Inspire:\n"
-#| "This unit can inspire own L0, L1, L2, or L3 units that are next to it, "
-#| "making them fight better. Adjacent own units of L3 will do more 25% more "
-#| "damage; L2 units will do 50% more, L1 will do 75% more, and L0 units will "
-#| "do 100% more."
 msgid ""
 "This unit can inspire own L0, L1, L2, or L3 units that are next to it, "
 "making them fight better. Adjacent own units of L3 will do more 25% more "
 "damage; L2 units will do 50% more, L1 will do 75% more, and L0 units will do "
 "100% more."
 msgstr ""
-"Įkvėpimas:\n"
-"Šis dalinys gali įkvėpti savus L0, L1, L2 ar L3 dalinius esančius greta, "
-"priversdamas juos kautis geriau. Šalia esantys L3 daliniai darys 25% daugiau "
-"žalos, L2 daliniai darys 50% daugiau žalos, L1 daliniai darys 75% daugiau "
-"žalos, o L0 daliniai darys 100% daugiau žalos."
+"Šis dalinys gali įkvėpti savus L0, L1, L2 ar L3 karius esančius greta, "
+"priversdamas juos kautis geriau. Šalia esantys L3 kariai darys 25% daugiau "
+"žalos; L2 karys darys 50% daugiau žalos, L1 kariai darys 75% daugiau žalos, "
+"o L0 karys darys 100% daugiau žalos."
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/utils/herodeaths.cfg:9
@@ -2699,6 +2664,3 @@ msgid ""
 "Aaarrgh! Though I die, the flame of righteousness shall send you down to "
 "darkness!"
 msgstr "Aaarrgh! Nors aš mirštu, teisingumo liepsna pasiųs jus visus į tamsą!"
-
-#~ msgid "You retrieve $amount_gold pieces of gold."
-#~ msgstr "Jūs gaunate $amount_gold auksinių."
