--- a/po/wesnoth-utbs/lt.po
+++ b/po/wesnoth-utbs/lt.po
@@ -3,10 +3,10 @@
 #  Andrius Štikonas <stikonas@gmail.com>, 2007-2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: Battle for Wesnoth 1.10\n"
+"Project-Id-Version: Battle for Wesnoth 1.11\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-12-07 20:59+0100\n"
-"PO-Revision-Date: 2012-03-31 16:12+0300\n"
+"PO-Revision-Date: 2010-01-01 00:00+0300\n"
 "Last-Translator: Andrius Štikonas <stikonas@gmail.com>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "Language: Lithuanian\n"
@@ -1170,9 +1170,8 @@ msgstr ""
 #. [message]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:515
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:658
-#, fuzzy
 msgid "Should I take this ring?"
-msgstr "Ar turėčiau paimti šį kalaviją?"
+msgstr "Ar turėčiau paimti šį žiedą?"
 
 #. [option]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:517
@@ -1196,7 +1195,6 @@ msgstr "Kiekvieno ėjimo pabaigoje šis dalinys nepatiria žalos iš dykumos."
 #. [option]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:553
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:693
-#, fuzzy
 msgid "No, I think someone else should wear it."
 msgstr "Ne, manau, jis skirtas kam nors kitam."
 
@@ -1620,17 +1618,13 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:1664
-#, fuzzy
-#| msgid "Should I take this sword?"
 msgid "Should I take the holy water?"
-msgstr "Ar turėčiau paimti šį kalaviją?"
+msgstr "Ar turėčiau paimti šį šventintą vandenį?"
 
 #. [object]: id=PureWater
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:1671
-#, fuzzy
-#| msgid "Pure Water"
 msgid "Holy Water"
-msgstr "Grynas vanduo"
+msgstr "Šventintas vanduo"
 
 #. [object]: id=PureWater
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:1673
@@ -1641,7 +1635,6 @@ msgstr ""
 
 #. [option]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:1695
-#, fuzzy
 msgid "No, I think someone else should take it."
 msgstr "Ne, manau, jis skirtas kam nors kitam."
 
@@ -2653,17 +2646,13 @@ msgstr "Ug’lokas"
 
 #. [objectives]
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:209
-#, fuzzy
-#| msgid "New Objectives:"
 msgid "Objectives:"
-msgstr "Nauji tikslai:"
+msgstr "Tikslai:"
 
 #. [objective]: condition=win
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:211
-#, fuzzy
-#| msgid "Kaleh Must Reach the Northern Edge of the Desert"
 msgid "Kaleh must reach the exit tunnel at the north edge of the map"
-msgstr "Kalehas privalo pasiekti šiaurinį dykumos kraštą"
+msgstr "Kalehas turi pasiekti tunelį šiauriniame žemėlapio krašte"
 
 #. [message]: speaker=Nym
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:368
@@ -7004,10 +6993,8 @@ msgstr ""
 
 #. [message]: speaker=Kaleh
 #: data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg:2753
-#, fuzzy
-#| msgid "Okay Nym, just be careful."
 msgid "You can go Nym, just be careful."
-msgstr "Gerai, Nym, tik būk atsargi."
+msgstr "Gali eiti, Nym, tik būk atsargi."
 
 #. [message]: speaker=Nym
 #: data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg:2758
@@ -7307,10 +7294,8 @@ msgstr ""
 
 #. [message]: speaker=Kaleh
 #: data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg:3258
-#, fuzzy
-#| msgid "$speaker.name|, be quiet, I’ll explain it all later."
 msgid "$unit.name|, be quiet, I’ll explain it all later."
-msgstr "$speaker.name|, tyliai, vėliau viską paaiškinsiu."
+msgstr "$unit.name|, tyliai, vėliau viską paaiškinsiu."
 
 #. [message]: speaker=Kaleh
 #: data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg:3275
@@ -7986,8 +7971,6 @@ msgstr "Praėjo kelios valandos..."
 
 #. [message]: speaker=Zhul
 #: data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg:4499
-#, fuzzy
-#| msgid "In Eloh’s name, Nym, you look terrible. Are you okay?"
 msgid "In Eloh’s name, Nym, you look terrible. Are you well?"
 msgstr "Eloh vardu, Nym, atrodai baisiai. Ar tau viskas gerai?"
 
@@ -8744,16 +8727,12 @@ msgstr ""
 
 #. [message]: speaker=Zhul
 #: data/campaigns/Under_the_Burning_Suns/scenarios/09_Blood_is_Thicker_Than_Water.cfg:1418
-#, fuzzy
-#| msgid ""
-#| "Esanoo said there were five merfolk captured. We only found four. Where "
-#| "did they hide the last one? What horrible fate has befallen her?"
 msgid ""
 "Esanoo said there were five merfolk captured. We only found four. Where did "
 "they hide the last one? What horrible acts have these humans committed?"
 msgstr ""
 "Esanū pasakė, kad sučiupo penkis vandenius. Radome tik keturis. Kur jie "
-"padėjo paskutinę? Kokia siaubinga lemtis ją ištiko?"
+"padėjo dar vieną? Kokių siaubų pridirbo šie žmonės?"
 
 #. [message]: race=merman
 #: data/campaigns/Under_the_Burning_Suns/scenarios/09_Blood_is_Thicker_Than_Water.cfg:1423
@@ -12522,11 +12501,11 @@ msgstr "geresnis lankininkas"
 
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Kaleh.cfg:220
 msgid "a marksman with the bow"
-msgstr "snaiperis su lanku"
+msgstr ""
 
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Kaleh.cfg:237
 msgid "gain +20% resistance under the sun"
-msgstr "gauti +20% atsparumą nuo saulės"
+msgstr ""
 
 #. [resistance]: id=sustenance
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Kaleh.cfg:256
@@ -13903,45 +13882,3 @@ msgstr "Ilgoji tamsa (3)"
 #: data/campaigns/Under_the_Burning_Suns/utils/time.cfg:164
 msgid "The Long Dark (4)"
 msgstr "Ilgoji tamsa (4)"
-
-#~ msgid "Eloh protect us, what has she done?"
-#~ msgstr "Eloh, apsaugok mus, ką ji padarė?"
-
-#~ msgid "No fool! Stop!"
-#~ msgstr "Ne, kvaily! Stok!"
-
-#~ msgid "Trolls"
-#~ msgstr "Troliai"
-
-#~ msgid "Dwarves"
-#~ msgstr "Dvarfai"
-
-#~ msgid "What in Moradin’s name are they?"
-#~ msgstr "Kas, Moradino vardu, jie tokie?"
-
-#~ msgid "Test"
-#~ msgstr "Išbandymas"
-
-#~ msgid "The user feels much better."
-#~ msgstr "Naudotojas jaučiasi daug geriau."
-
-#~ msgid "Campfire"
-#~ msgstr "Stovyklos laužas"
-
-#~ msgid "Dummy Unit1"
-#~ msgstr "Netikras dalinys 1"
-
-#~ msgid "Dummy Unit2"
-#~ msgstr "Netikras dalinys 2"
-
-#~ msgid "Dummy Unit3"
-#~ msgstr "Netikras dalinys 3"
-
-#~ msgid "Dummy Unit4"
-#~ msgstr "Netikras dalinys 4"
-
-#~ msgid "Dummy Unit5"
-#~ msgstr "Netikras dalinys 5"
-
-#~ msgid "Dummy Unit6"
-#~ msgstr "Netikras dalinys 6"
