--- a/po/wesnoth-manpages/lt.po
+++ b/po/wesnoth-manpages/lt.po
@@ -3,9 +3,9 @@
 #  Andrius Štikonas <stikonas@gmail.com>, 2007-2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: Battle for Wesnoth 1.10\n"
+"Project-Id-Version: Battle for Wesnoth 1.11\n"
 "POT-Creation-Date: 2012-08-18 09:40+0300\n"
-"PO-Revision-Date: 2012-01-06 14:54+0300\n"
+"PO-Revision-Date: 2010-01-01 00:00+0300\n"
 "Last-Translator: Andrius Štikonas <stikonas@gmail.com>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "Language: Lithuanian\n"
@@ -145,10 +145,9 @@ msgstr ""
 
 #. type: TP
 #: ../../doc/man/wesnoth.6:54
-#, fuzzy, no-wrap
-#| msgid "B<--campaign-difficulty E<lt>difficultyE<gt>>"
+#, no-wrap
 msgid "B<--campaign-difficulty [E<lt>difficultyE<gt>]>"
-msgstr "B<--campaign-difficulty E<lt>sunkumasE<gt>>"
+msgstr "B<--campaign-difficulty [E<lt>sunkumasE<gt>]>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:57
@@ -180,7 +179,6 @@ msgstr "B<--config-dir>I<\\ pavadinimas>"
 # type: Plain text
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:67
-#, fuzzy
 msgid ""
 "sets the user configuration directory to I<name> under $HOME or \"My "
 "Documents\\eMy Games\" for windows.  You can also specify an absolute path "
@@ -188,7 +186,9 @@ msgid ""
 "Games\""
 msgstr ""
 "nustato naudotojo konfigūracijos aplanką į I<name> esantį $HOME arba „My "
-"Documents\\eMy Games“ windowsuose."
+"Documents\\eMy Games“ Windows sistemoje. Taip pat galite nurodyti pilną "
+"kelią iki konfigūracijos aplanko, jeigu jis nėra $HOME ar „My Documents\\eMy "
+"Games“ aplankuose"
 
 # type: TP
 #. type: TP
@@ -242,13 +242,12 @@ msgstr "B<-e,\\ --editor>I<\\ failas>"
 # type: Plain text
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:83
-#, fuzzy
 msgid ""
 "start the in-game map editor directly. If I<file> is specified, equivalent "
 "to B<-l --load>"
 msgstr ""
 "tiesiogiai paleidžia integruotą žemėlapių redaktorių. Jei nurodytas "
-"I<failas>, tai yra ekvivalentu B<-e --load>"
+"I<failas>, tai yra ekvivalentu B<-l --load>"
 
 # type: TP
 #. type: TP
@@ -487,10 +486,9 @@ msgstr "atspausdina žaidimo duomenų aplanko pavadinimą ir išeina."
 
 #. type: TP
 #: ../../doc/man/wesnoth.6:159
-#, fuzzy, no-wrap
-#| msgid "B<--preprocess-output-macros [E<lt>target fileE<gt>]>"
+#, no-wrap
 msgid "B<-p, --preprocess E<lt>source file/folderE<gt> E<lt>target directoryE<gt>>"
-msgstr "B<--preprocess-output-macros [E<lt>išvesties failasE<gt>]>"
+msgstr ""
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:169
@@ -582,7 +580,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:193
 #, no-wrap
 msgid "B<--username>I<E<lt>usernameE<gt>>"
-msgstr ""
+msgstr "B<--username>I<E<lt>naudotojo vardasE<gt>>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:196
@@ -595,7 +593,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:196
 #, no-wrap
 msgid "B<--password>I<E<lt>passwordE<gt>>"
-msgstr ""
+msgstr "B<--password>I<E<lt>slaptažodisE<gt>>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:199
