--- a/po/wesnoth-tsg/lt.po
+++ b/po/wesnoth-tsg/lt.po
@@ -3,9 +3,9 @@
 #  Andrius Štikonas <stikonas@gmail.com>, 2007-2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: Battle for Wesnoth 1.10\n"
+"Project-Id-Version: Battle for Wesnoth 1.11\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-08-18 09:41+0200\n"
+"POT-Creation-Date: 2012-08-18 09:52+0200\n"
 "PO-Revision-Date: 2010-01-01 00:00+0300\n"
 "Last-Translator: Andrius Štikonas <stikonas@gmail.com>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
@@ -1642,7 +1642,7 @@ msgstr ""
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:377
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:411
 msgid "We found the lich!"
-msgstr ""
+msgstr "Radome ličą!"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:458
@@ -1942,7 +1942,7 @@ msgid ""
 msgstr ""
 "Nežinau. Negalime pulti jo požeminės tvirtovės, tad privalome bėgti. Likę "
 "čia ir besikaudami jo diktuojamomis sąlygomis tikrai pražūtume. Žinau, kad "
-"jis ketina pulti ir nusiabti jūsiškį Vestiną visa savo galia, – bet tam "
+"jis ketina pulti ir nusiaubti jūsiškį Vestiną visa savo galia, – bet tam "
 "nepasiruošęs miestas tokios jėgos neatlaikys."
 
 #. [message]: speaker=Deoran
@@ -1957,7 +1957,7 @@ msgstr ""
 #. [message]: speaker=Sir Gerrick
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:891
 msgid "Now, on with those bandits!"
-msgstr ""
+msgstr "O dabar, susitvarkykime su nusikaltėliais!"
 
 #. [message]: speaker=Sir Gerrick
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:909
