--- a/po/wesnoth-dm/sk.po
+++ b/po/wesnoth-dm/sk.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-12-07 20:59+0100\n"
-"PO-Revision-Date: 2012-01-14 16:14+0100\n"
+"PO-Revision-Date: 2012-12-06 21:11+0100\n"
 "Last-Translator: Roman Beno <romanbeno273@gmail.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -73,8 +73,7 @@ msgstr ""
 #: data/campaigns/Delfadors_Memoirs/_main.cfg:37
 msgid "(Intermediate level, 19 scenarios.)"
 msgstr ""
-"(Stredne ťažká obtiažnosť, 19 scenárov.   Preložil Roman Beňo "
-"(Svistwarrior273))"
+"(Stredne ťažká obtiažnosť, 19 scén.   Preložil Roman Beňo (Svistwarrior273))"
 
 #. [about]
 #: data/campaigns/Delfadors_Memoirs/_main.cfg:40
